[tool.poetry]
name = "clustering-demos"
version = "0.1.0"
description = "A series of tutorials walking you though data clustering and dimensionality reduction examples"
authors = ["rluthi <18192364+rluthi@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.0"
huddles = {path = "../huddles", develop = true}  # TODO: after dev, point to pypi


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
